[tool.poetry]
name = "lw4"
version = "0.1.0"
description = ""
authors = ["Pavel Miskevich <chiki-takipavel@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
